syntax = "proto3";
//PROTOBUF FOR CLIENT SERVER COMMUNICATION
service logTimeFunction {
  rpc TimeFunction(TimeData) returns (TimeResponse);
}

message TimeData {
  string time = 1;
}

message TimeResponse {
  bool result = 1;
}